--- a/templates/project-with-id.html
+++ b/templates/project-with-id.html
@@ -31,58 +31,30 @@
                             </div>
                             <ul class="project-activity-analyses-list">
                                 <li class="project-activity-analysis" :data-date="result.create_time.$date"
-                                    v-for="result in d.results">
-                                    <div class="project-activity-time ">
+                                    v-for="result in d.results" @click="getResultDetail(result.was_successful, result._id.$oid)">
+                                    <div class="project-activity-time">
                                         <time class="text-middle" datetime="2018-07-25T08:13:42.000Z">
                                             {{getTime(result.create_time.$date)}}
                                         </time>
                                     </div>
-                                    <div class="project-activity-events">
-                                    <div class="project-activity-event">
-                                    <div class="project-activity-event-inner">
-                                    <div class="project-activity-event-inner-icon little-spacer-right">
-                                    <svg class="project-activity-event-icon margin-align VERSION" width="14" height="14" viewBox="0 0 16 16" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                    xml:space="preserve">
-                                    <path d="M8 2 L14 8 L8 14 L2 8 L8 2 L14 8" style="fill: rgb(255, 255, 255); stroke: currentcolor; stroke-width: 2px;"></path>
-                                    </svg>
-                                    </div>
-                                    <span class="project-activity-event-inner-text">
-                                    <span class="note">Version:</span>
-                                    <strong>{{result.version}}</strong>
-                                    </span>
-                                    </div>
-                                    <div class="project-activity-event-actions spacer-left">
-                                    <button class="button js-change-event button-small button-icon"
-                                    type="button" style="color: rgb(35, 106, 151);">
-                                    <svg width="16" height="16" viewBox="0 0 16 16" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve">
-                                    <path d="M4.875 12.986l.721-.72-1.861-1.862-.721.72v.848h1.014v1.014h.847zm4.143-7.35c0-.117-.058-.175-.174-.175a.183.183 0 0 0-.135.056L4.416 9.81a.183.183 0 0 0-.056.135c0 .116.058.174.175.174a.183.183 0 0 0 .134-.056L8.962 5.77a.183.183 0 0 0 .056-.134zM8.59 4.115l3.295 3.295L5.295 14H2v-3.295l6.59-6.59zm5.41.76a.97.97 0 0 1-.293.713l-1.315 1.315-3.295-3.295L10.412 2.3c.19-.2.428-.301.713-.301.28 0 .52.1.72.301l1.862 1.853c.195.206.293.447.293.721z"
-                                    style="fill: currentcolor;"></path>
-                                    </svg>
-                                    </button>
-                                    </div>
-                                    </div>
-                                    </div>
+                                    <div class="project-list-items">
+                                        <div class="project-list-items">
 
-                                    <!--<div class="project-list-items">-->
-                                        <!--<svg class="project-activity-event-icon margin-align VERSION" width="14" height="14" viewBox="0 0 16 16" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"-->
-                                                            <!--xml:space="preserve">-->
-                                                            <!--<path d="M8 2 L14 8 L8 14 L2 8 L8 2 L14 8" style="fill: rgb(255, 255, 255); stroke: currentcolor; stroke-width: 2px;"></path>-->
-                                                        <!--</svg>-->
-
-                                        <!--<span class="project-activity-event-inner-text">-->
-                                                        <!--<span class="note">Version:</span>-->
-                                                        <!--<strong>{{result.version}}</strong>-->
-                                                    <!--</span>-->
-                                        <!--<div class="project-activity-event-actions spacer-left">-->
-                                            <!--<button class="button js-change-event button-small button-icon"-->
-                                                    <!--type="button" style="color: rgb(35, 106, 151);">-->
-                                                <!--<svg width="16" height="16" viewBox="0 0 16 16" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve">-->
-                                                            <!--<path d="M4.875 12.986l.721-.72-1.861-1.862-.721.72v.848h1.014v1.014h.847zm4.143-7.35c0-.117-.058-.175-.174-.175a.183.183 0 0 0-.135.056L4.416 9.81a.183.183 0 0 0-.056.135c0 .116.058.174.175.174a.183.183 0 0 0 .134-.056L8.962 5.77a.183.183 0 0 0 .056-.134zM8.59 4.115l3.295 3.295L5.295 14H2v-3.295l6.59-6.59zm5.41.76a.97.97 0 0 1-.293.713l-1.315 1.315-3.295-3.295L10.412 2.3c.19-.2.428-.301.713-.301.28 0 .52.1.72.301l1.862 1.853c.195.206.293.447.293.721z"-->
-                                                                <!--style="fill: currentcolor;"></path>-->
-                                                        <!--</svg>-->
-                                            <!--</button>-->
-                                        <!--</div>-->
-                                    <!--</div>-->
+                                            <svg class="project-list-icon" width="14" height="14" viewBox="0 0 16 16">
+                                                <path d="M8 2 L14 8 L8 14 L2 8 L8 2 L14 8"
+                                                      style="fill: rgb(255, 255, 255); stroke: currentcolor; stroke-width: 2px;"></path>
+                                            </svg>
+                                            <span class="note">Version:</span>
+                                            <strong>{{result.version}}</strong>
+                                        </div>
+                                        <button class="button js-change-event button-small button-icon"
+                                                type="button" style="color: rgb(35, 106, 151);">
+                                            <svg width="16" height="16" viewBox="0 0 16 16">
+                                                <path d="M4.875 12.986l.721-.72-1.861-1.862-.721.72v.848h1.014v1.014h.847zm4.143-7.35c0-.117-.058-.175-.174-.175a.183.183 0 0 0-.135.056L4.416 9.81a.183.183 0 0 0-.056.135c0 .116.058.174.175.174a.183.183 0 0 0 .134-.056L8.962 5.77a.183.183 0 0 0 .056-.134zM8.59 4.115l3.295 3.295L5.295 14H2v-3.295l6.59-6.59zm5.41.76a.97.97 0 0 1-.293.713l-1.315 1.315-3.295-3.295L10.412 2.3c.19-.2.428-.301.713-.301.28 0 .52.1.72.301l1.862 1.853c.195.206.293.447.293.721z"
+                                                      style="fill: currentcolor;"></path>
+                                            </svg>
+                                        </button>
+                                    </div>
                                 </li>
                             </ul>
                         </li>
@@ -105,22 +77,20 @@
                 <button id="copy_button">复制</button>
                 <button id="update_button">更新</button>
             </div>
-            <div class="project-activity-layout-page-main-inner boxed-group boxed-group-inner">
+            <div class="boxed-group project-traceback-list">
                 <div class="panel-group" id="accordion">
-                    <div class="panel panel-default">
+                    <div class="panel panel-default" v-for="(x, index) in tracebacks">
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion"
-                                   href="#collapseOne">
-                                    点击我进行展开，再次点击我进行折叠。第 1 部分
+                                   :href="'#collapse'+index">
+                                    {{x.test_case}}
                                 </a>
                             </h4>
                         </div>
-                        <div id="collapseOne" class="panel-collapse collapse in">
+                        <div :id="'collapse'+index" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Nihil anim keffiyeh helvetica, craft beer labore wes anderson
-                                cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
-                                vice lomo.
+                                {{x.note}}
                             </div>
                         </div>
                     </div>
@@ -140,7 +110,8 @@
                 pro_id: '{{ id }}',
                 list: [],
                 tags: [''],
-                tag: ''
+                tag: '',
+                tracebacks: []
                 //dates:[]
             },
             methods: {
@@ -191,6 +162,18 @@
                         if (!res || !res.data) { return alert('异常') }
                         vm.tags = vm.tags.concat(res.data)
                     })
+                },
+                getResultDetail(was_successful, id) {
+                    var vm = this;
+                    if (!was_successful){
+                        $.get('/api/test-result?id=' + id, function (res) {
+                            if (!res || !res.data) { return alert('异常') }
+                            vm.tracebacks = res.data.details;
+                            console.info(vm.tracebacks);
+                        })
+                    } else {
+                        vm.tracebacks = [];
+                    }
                 }
             },
             created: function () {
@@ -206,9 +189,6 @@
             var m = date.getMinutes();
             return (h.toString() + ":" + m.toString());
         }
-
-
-
 
 
 </script>
