--- a/static/css/qaadmin.css
+++ b/static/css/qaadmin.css
@@ -62,6 +62,9 @@
     background:linear-gradient(-90deg,#fff 0,rgba(255,255,255,0) 100%)
 }
 
+/* Record List */
+.branch-row>div:nth-of-type(2),.branch-row>div:nth-of-type(3){width:40%}
+
 /* Tile */
 .tile{height:auto;padding:.8em .5em .8em 1.5em;margin-bottom:.46rem;background-color:#fff;border-radius:0}
 .tile.passed{background:linear-gradient(to right,#39aa56 0,#39aa56 8px,#fff 8px,#fff 100%) no-repeat}
@@ -81,3 +84,31 @@
 .tile h2:after{content:"";display:block;position:absolute;top:0;right:0;width:2em;height:100%;background:linear-gradient(-90deg,#fff 0,rgba(255,255,255,0) 100%)}}
 .tile p.tile-title{width:10%}@media only screen and (min-width:50.063em){.tile p.tile-title{width:27%;white-space:nowrap;overflow:hidden}}
 .tile a:hover{text-decoration:underline}
+
+.row-li.passed{background:linear-gradient(to right,#39aa56 0,#39aa56 10px,#fff 10px,#fff 100%) no-repeat}
+.row-li .passed,.row-li .passed a{color:#39aa56}
+.row-li .request-icon.passed circle,.row-li .request-icon.passed ellipse,.row-li .request-icon.passed line,.row-li .request-icon.passed path,.row-li .request-icon.passed polygon,.row-li .request-icon.passed polyline,.row-li .request-icon.passed rect,.row-li .status-icon.passed circle,.row-li .status-icon.passed ellipse,.row-li .status-icon.passed line,.row-li .status-icon.passed path,.row-li .status-icon.passed polygon,.row-li .status-icon.passed polyline,.row-li .status-icon.passed rect{fill:none;stroke:#39aa56}
+.build-tiles>.passed{background-color:#deecdc}
+.build-tiles>.passed:hover{background-color:#39aa56}
+.build-tiles>.passed:hover .status-icon circle,.build-tiles>.passed:hover .status-icon ellipse,.build-tiles>.passed:hover .status-icon line,.build-tiles>.passed:hover .status-icon path,.build-tiles>.passed:hover .status-icon polygon,.build-tiles>.passed:hover .status-icon polyline,.build-tiles>.passed:hover .status-icon rect{fill:none;stroke:#fff}
+
+
+.build-tiles{height:4.7em;margin:0;padding:0;list-style:none}
+.build-tiles li{position:relative;height:100%;float:left;width:50%;background-color:#f1f1f1;border-right:1px solid #fff}
+.build-tiles li:last-of-type{border-right:none}
+.build-tiles li .status-icon{padding:1px;position:absolute;top:0;right:0;bottom:0;left:0;width:18px;height:18px;margin:auto!important;background-color:transparent;transition:top .2s ease}
+.build-tiles li .build-tile-number{margin:auto;height:1em;width:auto;text-align:center;position:absolute;transform:scale(.7);opacity:0;color:#fff;transition:transform .2s ease,opacity .2s ease;top:0;right:0;bottom:-1.5em;left:0}
+.build-tiles li:hover .status-icon{top:-1.4em}
+
+.build-tiles li:hover .build-tile-number{transform:scale(1);opacity:1}
+.build-tiles a{display:block;height:100%;text-align:center}
+.build-tiles>.failed{background-color:#fce8e2}
+.build-tiles>.failed .status-icon circle,.build-tiles>.failed .status-icon ellipse,.build-tiles>.failed .status-icon line,.build-tiles>.failed .status-icon path,.build-tiles>.failed .status-icon polygon,.build-tiles>.failed .status-icon polyline,.build-tiles>.failed .status-icon rect{fill:none;stroke:#db4545}
+.build-tiles>.failed:hover{background-color:#db4545}
+.build-tiles>.failed:hover .status-icon circle,.build-tiles>.failed:hover .status-icon ellipse,.build-tiles>.failed:hover .status-icon line,.build-tiles>.failed:hover .status-icon path,.build-tiles>.failed:hover .status-icon polygon,.build-tiles>.failed:hover .status-icon polyline,.build-tiles>.failed:hover .status-icon rect{fill:none;stroke:#fff}
+.build-tiles>.failed:hover .status-icon *{stroke-width:2px}
+.build-tiles>.errored{background-color:#fce8e2}
+.build-tiles>.errored .status-icon circle,.build-tiles>.errored .status-icon ellipse,.build-tiles>.errored .status-icon line,.build-tiles>.errored .status-icon path,.build-tiles>.errored .status-icon polygon,.build-tiles>.errored .status-icon polyline,.build-tiles>.errored .status-icon rect{fill:none;stroke:#db4545}
+.build-tiles>.errored:hover{background-color:#db4545}
+.build-tiles>.errored:hover .status-icon circle,.build-tiles>.errored:hover .status-icon ellipse,.build-tiles>.errored:hover .status-icon line,.build-tiles>.errored:hover .status-icon path,.build-tiles>.errored:hover .status-icon polygon,.build-tiles>.errored:hover .status-icon polyline,.build-tiles>.errored:hover .status-icon rect{fill:none;stroke:#fff}
+.build-tiles>.errored:hover .status-icon *{stroke-width:2px}
